Fixed content overflow in like, submit, footer, booking-room #11

--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -61,6 +61,10 @@
       margin-bottom: 0;
     }
   }
+  &__sum {
+    padding-right: 25px;
+    flex-basis: 68%;
+  }
   &__services,
   &__add-services {
     padding-right: 25px;
