--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 160px;
+    min-width: 160px;
     @media (max-width: 670px) {
       display: none;
     }
