--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -3,7 +3,7 @@
 .like-button {
   display: flex;
   align-items: center;
-  width: 2.5rem;
+  min-width: 2.5rem;
   height: 1.25rem;
   border: solid 1px $color-main-25;
   background: white;
@@ -40,6 +40,7 @@
   }
   &__count {
     margin-left: 2px;
+    margin-right: 9px;
     font-size: 0.5625rem;
     line-height: 0.75rem;
     color: $color-main-25;
