--- a/src/components/submit-button/submit-button.scss
+++ b/src/components/submit-button/submit-button.scss
@@ -1,15 +1,14 @@
 @import '../../scss/variables.scss';
 
 .submit-button {
-  position: relative;
   &__button {
+    position: relative;
     width: 100%;
     text-transform: uppercase;
     font-size: 0.75rem;
     font-family: inherit;
     line-height: 15px;
-    padding-top: 14px;
-    padding-bottom: 15px;
+    padding: 14px 35px 15px;
     font-weight: bold;
     background: $color-secondary-gradient;
     color: white;
@@ -25,13 +24,12 @@
   &__arrow {
     position: absolute;
     text-transform: lowercase;
-    text-align: center;
     font-family: $material-icons;
     font-size: 24px;
-    line-height: 44px;
-    color: #fff;
     width: 44px;
-    top: 0;
+    color: #fff;
+    top: 50%;
     right: 0;
+    margin-top: -7.5px;
   }
 }
