--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -140,7 +140,6 @@
   }
   &__like-button {
     display: inline-block;
-    width: 40px;
     margin-right: 10px;
   }
   &__rate-button-text {
